# MRM-extension

./: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  FileManager.cpp  FileManager.hpp  OsuManager.cpp  OsuManager.hpp  WindowsManager.cpp  WindowsManager.hpp  main.cpp
